--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Alex Murray</h1>
         <p>Computer Science Student at SUNY Buffalo & Aspiring Software Engineer</p>
-        <img src="Photo on 7-29-24 at 11.01 PM.jpg" alt = "Picutre of Me" width="500px">
+        <img src="images/Photo on 7-29-24 at 11.01 PM.jpg" alt = "Picutre of Me" width="500px">
     </header>
 
     <section id="about-me">
@@ -40,7 +40,7 @@
 
     <section id="videos">
         <h2>Resume</h2>
-        <img src="Screenshot 2024-08-06 at 8.59.37 PM.png" alt="Resume" width="800px" class="video-container">
+        <img src="images/Screenshot 2024-08-06 at 8.59.37 PM.png" alt="Resume" width="800px" class="video-container">
     </section>
 
     <footer>
