--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h2>Links</h2>
         <ul>
             <li><a href="https://www.linkedin.com/in/alex-murray-87032b25b/">LinkedIn</a></li>
+            <li><a href="https://www.youtube.com/@alexmvrray/videos">YouTube</a></li>
             <li><a href="https://github.com/alex-murrayy">GitHub</a></li>
             <li><a href="https://app.joinhandshake.com/profiles/40489757">Handshake</a></li>
             <li><a href="https://leetcode.com/u/aalexmurray/">LeetCode</a></li>
@@ -31,10 +32,14 @@
         <h2>Projects</h2>
         <ul>
             <li><a href="BAC.html">BAC Calculator</a>: This is  a simple web app that calculates Blood Alcohol Content of users and then tells them wether it is safe to drive or not.</li>
-            <li><a href="https://github.com/alex-murrayy/Computer-Vision-Mouse">Computer Vision Mouse</a>: Tired of your clunky computer mouse? This project aims to replace your mouse using computer vision and gesture recognition. *Still in development* </li>
+            <li><a href="https://github.com/alex-murrayy/Computer-Vision-Mouse">Computer Vision Mouse</a>: This project uses computer vision to enable the user to perform mouse actions by making simple hand movements and gestures.</li>
             <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/p_QCPGMXJok" frameborder="0" allowfullscreen></iframe>
-        </div>
+            </div>
+            <li><a href="https://github.com/alex-murrayy">Pupil Tracking</a>: This code tracks the users pupils. Will be posted to GitHub soon.</li>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/s6zmPjJOjfI" frameborder="0" allowfullscreen></iframe>
+            </div>
         </ul>
     </section>
 
